--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.5",
